Mon Mar 16 08:34:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Exclusive_TMS.h:
        * tao/Muxed_TMS.h:
          Added forward declaration

        * tao/Policy_Set.cpp:
          Layout changes

        * tao/Profile.cpp:
          Fixed 64bit issue, use operator!

        * tao/Synch_Invocation.cpp:
        * tao/RTPortableServer/RT_Servant_Dispatcher.cpp:
          Use operator!

Mon Mar 16 08:26:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/RTCORBA/Client_Propagated/run_test.pl:
          Converted to the new test framework

        * bin/tao_orb_tests.lst:
          Enabled Client_Propagated test for WinCE/FUZZ/Labview

Mon Mar 16 07:56:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/FaultTolerance/FT_ClientRequest_Interceptor.cpp:
        * orbsvcs/orbsvcs/FaultTolerance/FT_Invocation_Endpoint_Selectors.cpp:
          Layout, const, and use operator! changes

Mon Mar 16 07:54:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Event/EC_Thread_Flags.cpp:
        * orbsvcs/orbsvcs/Event/ECG_UDP_Receiver.cpp:
          Unicode fixes

Sun Mar 15 19:50:41 UTC 2009  Olli Savia  <ops@iki.fi>

        * orbsvcs/orbsvcs/Notify/ETCL_FilterFactory.cpp:
        * orbsvcs/tests/Notify/Test_Filter/RT_Test_FilterFactory.cpp:
          Fixed compile warnings.

Sun Mar 15 18:39:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/tao_idl.mpc:
          Added $TAO_ROOT to the includes to pull in rules.tao.GNU which
          results in all TAO_IDL libs to get the TAO version number.
          This fixes bugzilla 3395

Sat Mar 14 13:29:22 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/Notify/Test_Filter/RT_Test_FilterFactory.h:
        * orbsvcs/tests/Notify/Test_Filter/RT_Test_FilterFactory.cpp:

          Added new virtual function required by change to
          Notify/FilterFactory.h.
