@@ -36,7 +36,7 @@ TAO_RT_Invocation_Endpoint_Selector::select_endpoint (
   CORBA::Policy_var client_protocol_policy_base =
     TAO_RT_Endpoint_Utils::policy (TAO_CACHED_POLICY_RT_CLIENT_PROTOCOL, *r);
 
-  if (client_protocol_policy_base.ptr () == 0)
+  if (CORBA::is_nil(client_protocol_policy_base.in ()))
     {
       do
         {
@@ -119,9 +119,9 @@ TAO_RT_Invocation_Endpoint_Selector::select_endpoint_based_on_client_protocol_po
   // policy with no success.  Throw exception.
   if (!valid_profile_found)
     {
-      if (r.inconsistent_policies ())
+      CORBA::PolicyList *p = r.inconsistent_policies ();
+      if (p)
         {
-          CORBA::PolicyList *p = r.inconsistent_policies ();
 
           p->length (1);
           (*p)[0u] = CORBA::Policy::_duplicate (client_protocol_policy);
@@ -161,14 +161,14 @@ TAO_RT_Invocation_Endpoint_Selector::endpoint_from_profile (
   CORBA::Short max_priority = 0;
 
   // If the priority model policy is not set.
-  if (priority_model_policy.ptr () == 0)
+  if (CORBA::is_nil (priority_model_policy.in ()))
     {
       // Bands without priority model do not make sense.
-      if (bands_policy.ptr () != 0)
+      if (!CORBA::is_nil (bands_policy.in ()))
         {
-          if (r.inconsistent_policies ())
+          CORBA::PolicyList *p = r.inconsistent_policies ();
+          if (p)
             {
-              CORBA::PolicyList *p = r.inconsistent_policies ();
 
               p->length (1);
               (*p)[0u] = CORBA::Policy::_duplicate (bands_policy.in ());
@@ -247,10 +247,9 @@ TAO_RT_Invocation_Endpoint_Selector::endpoint_from_profile (
                   // If priority doesn't fall into any of the bands.
                   if (!in_range)
                     {
-                      if (r.inconsistent_policies ())
+                      CORBA::PolicyList *p = r.inconsistent_policies ();
+                      if (p)
                         {
-
-                          CORBA::PolicyList *p = r.inconsistent_policies ();
                           p->length (2);
                           (*p)[0u] = CORBA::Policy::_duplicate (bands_policy.in ());
                           (*p)[1u] =
